package alien4cloud.security;

/**
 * All permissions that can given on a resource
 */
public enum Permission {
    ADMIN, READ, WRITE
}
