@startuml
note left of FeatureSecurityConfiguration {
  The security configuration of a feature.
  It contains the identity of the REST method to secure and the required role to access to the feature.
  This security configuration can be dynamic or statically configured by default on the REST method.
  The design can be similar to what has been done on Audit
}
class FeatureSecurityConfiguration {
    - name: String
    - restEndpoint: String
    - restMethod: String
    - requiredRole: Role
}
class Role {
    - permissions: List<Permission>
}
note right of Role::permissions {
  A Role is a collection of permissions.
  APPLICATION_MANAGER has read and write permission on the Application, APPLICATION_USER has read access only.
  APPLICATION_DEPLOYER has execute permission on the Environment, execute permission on the matched location's resources.
  Alien4Cloud has an ADMIN role which bypass every security filter and has access to every features and every resources.
  Each resource has an 'ADMIN' role which bypass every security filter on the resource (APPLICATION_MANAGER on an application ...).
}
class User {
}
class Group {
    - parentId: String
}
note right of Group {
  A group is a collection of users and eventually other groups.
  A group is created automatically for an application.
}
class Permission {
    - name: String
    - sourceId: String
    - sourceType: String
}
note right of Permission::name {
  Name of the permission, it could be Read, Write, Execute ...
  A read permission on an application gives user access to all application's details.
  A write permission on an application gives user the privilege to modify the details, delete ...
  A execute permission on an environment or location gives user the privilege to launch deployment on the environment.
}
note left of Permission::sourceId {
  If the permission is linked to an SecuredResource then this field contains the id of the object.
}
note left of Permission::sourceType {
  If the permission is linked to an SecuredResource then this field contains the type of the object.
}
class SecuredResource {
    - parentId: String
    - parentType: String
    - componentTypes: List<String>
}
note left of SecuredResource {
  A secured resource might have a parent if it's contained by a global secured resource.
  If it can contains other objects, then their types must be present in componentTypes, this way from the parent we can query the children and vice versa.
}

User "0..n" o-- "0..n" Group : "Member of"

Group "0..1" *-- "0..n" Group: "Contains"

User "0..n" o-- "0..n" Role : "Has role"

Group "0..n" o-- "0..n" Role : "Has role"

Role "1..n" o-- "1..n" Permission : "Contains"

FeatureSecurityConfiguration "1..n" o-- "0..1" Role : "Requires"

Permission "1..n" o-- "0..1" SecuredResource : "Linked To"

SecuredResource "0..1" *-- "0..n" SecuredResource : "Contains"
@enduml